Add relationship test to stg_orders

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -11,6 +11,11 @@ models:
 
     - name: stg_orders
       columns: 
+        - name: order_id
+          tests:
+            - relationships:
+                to: ref('stg_customers')
+                field: customer_id
         - name: status
           tests:
             - accepted_values:
